# qalculator

./: .gitignore  Cargo.toml  LICENSE  Makefile  Qalculator.c  build.rs  compile_commands.json  style.css
.cache/clangd/index/: Qalculator.c.A8C88E7DD4D50DF4.idx
resources/: qalculator_window.ui  resources.gresource.xml  styles.css
src/: main.rs
src/qalculator_window/: imp.rs  mod.rs
